--- a/src/content/docs/homeworks/homework 0.mdx
+++ b/src/content/docs/homeworks/homework 0.mdx
@@ -1,5 +1,4 @@
 ---
-tentative: true
 title: homework 0 - setup
 description: Setup your development environment
 sidebar:
@@ -23,14 +22,10 @@ import { marked } from "marked";
 
 ## {frontmatter.description}
 
-**Quickstart**: Accept the assignment by creating a **personal private
-repository** in GitHub using [the homework0 template
-repository](https://github.com/swad-cs-uic/homework0) (click the "use this
-template" button). This repository is **not** automatically shared with the
-instructors, so if you want us to see your code and help when needed, please
-share it with `kaytwo` and `nkgotcode`. To complete this assignment, make the
-changes described below, ensure that your web application is available on the
-Internet, and then submit via Gradescope.  
+**Quickstart**: Host the string "CS 484 Homework 0" and your uic email address
+on the Internet someplace. Turn in a GitHub repository with that URL in a file
+called `url.txt` via Gradescope.Watch [the kickoff
+video](https://youtu.be/5xExn6wqHnA) or read below for more details.
 
 **Release:** <DueDate relativeDate={frontmatter.relative_release}  />
 
