--- a/src/content/docs/homeworks/homework 0.mdx
+++ b/src/content/docs/homeworks/homework 0.mdx
@@ -1,10 +1,10 @@
 ---
-title: homework 0 - setup
-description: Setup your development environment
+title: homework 0 - hello Internet world
+description: Setup your development environment, deploy your first web app
 sidebar:
   order: 30
 notes: >-
-  Watch [the kickoff video](https://youtu.be/5xExn6wqHnA) for help getting
+  Watch [the kickoff video](https://youtu.be/C81AdTlY6xw) for help getting
   started.
 relative_release:
   week: 1
@@ -25,7 +25,7 @@ import { marked } from "marked";
 **Quickstart**: Host the string "CS 484 Homework 0" and your uic email address
 on the Internet someplace. Turn in a GitHub repository with that URL in a file
 called `url.txt` via Gradescope.Watch [the kickoff
-video](https://youtu.be/5xExn6wqHnA) or read below for more details.
+video](https://youtu.be/C81AdTlY6xw) or read below for more details.
 
 **Release:** <DueDate relativeDate={frontmatter.relative_release}  />
 
