--- a/src/content/docs/homeworks/homework 0.mdx
+++ b/src/content/docs/homeworks/homework 0.mdx
@@ -227,10 +227,11 @@ you push a change to your repository. I go over this in the kickoff video.
 ## Submitting your work
 
 After you are confident that your web app is running as expected, you can submit
-it via Gradescope. **Check Piazza for the Gradescope invitation code**. All the
-Gradescope autograder does is reads `url.txt`, grabs that URL, and checks for
-your email address and the static string mentioned above. **Gradescope will only
-allow GitHub based submissions** - you must add `url.txt` to your repository and
+it via Gradescope. **Check Piazza for the Gradescope invitation code**. Anyone
+with an `@uic.edu` email address can join the course Piazza. All the Gradescope
+autograder does is reads `url.txt`, grabs that URL, and checks for your email
+address and the static string mentioned above. **Gradescope will only allow
+GitHub based submissions** - you must add `url.txt` to your repository and
 submit it through Gradescope. If you have issues with the autograder, please
 contact us via Piazza ASAP.
 
