ta office hours

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -66,6 +66,6 @@ Chris Kanich, ckanich@uic.edu
 Drop-In Office Hours: 3:30-4:30pm Mondays and Tuesdays  
 Drop-In Hours location: CDRLC 4411  
 
-Graduate TA: TBD  
-Drop-In Office Hours: TBD  
-Drop-In Hours location: TBD
+Graduate TA: Iman Deol  
+Drop-In Office Hours: 1:00pm-3:00pm Wednesdays  
+Drop-In Hours location: CDRLC 2404
