Test case description update

--- a/src/content/docs/homeworks/homework 1.mdx
+++ b/src/content/docs/homeworks/homework 1.mdx
@@ -131,10 +131,13 @@ submissions.**
 
 ## Points
 
-| Task                                            | Points |
-| ----------------------------------------------- | ------ |
-| Display high score as 0 when table is empty.    | 5      |
-| Save the high score and display the high score. | 5      |
+| Task                                                           | Points |
+| -------------------------------------------------------------- | ------ |
+| Display high score as 0 when table is empty.                   | 5      |
+| Save the high score and display the high score.                | 5      |
+| API returns JSON with a name                                   | 5      |
+| POST API rejects invalid scores                                | 5      |
+| Return the maximum score after multiple entries into database. | 5      |
 
 ## Due Date
 
