short wip full pass on hw1 writeup

--- a/src/content/docs/homeworks/homework 1.mdx
+++ b/src/content/docs/homeworks/homework 1.mdx
@@ -35,9 +35,20 @@ academic integrity policy in this course.
 
 # {frontmatter.description}
 
-This assignment gets you hands-on with a minimal “cookie-cutter” web application. There is a basic React app on the front end. You
-simply need to implement the absolute basics of adding and getting high scores
-from the database.
+This assignment gets you hands-on with a minimal "cookie-cutter" web
+application. There is a basic React app on the front end. Your job is to
+implement the basics of adding and getting high scores from the database.
+
+## Preliminaries
+
+After you've cloned the repository, all you have is the basic source code of
+this app - you don't have the libraries that are needed to actually run the code
+(nor the compiled web application that's ready to be run on the server and on
+the client. To get all of the dependencies ready to go, you'll need to run `npm
+install` within the directory. The install script will probably prompt you to do
+a _database migration_ - this is normal and you just need to hit "y" to
+continue. After that, you should be ready to start developing.
+
 
 ## Project structure
 
